# walking-pad

./: .env.example  .gitignore  README.md  add_fitbit_activity.py  connection_manager.py  docker-compose.yml  pyproject.toml  requirements.txt  restserver.py  run_with_uv.sh  set_speed.py  setup_fitbit_oauth.py  simple_server.py  start_server.sh  start_walk.py  stop_walk.py  test_connection.py  test_uv_setup.py
